# -career-intelligence-

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.py  pyproject.toml  railway.toml  requirements.txt  start.sh
.streamlit/: config.toml
brand/: BRAND-RESEARCH-POSITIONING.md  DESIGN-QUICK-REFERENCE.md  DESIGN.md
docs/superpowers/plans/: 2026-06-29-career-intelligence-dashboard-completion.md
docs/superpowers/specs/: 2026-06-29-career-intelligence-dashboard-completion-design.md  2026-06-29-data-source-findings.md
scripts/: _screenshots.py  download_indeed_trends.py  download_job_bank_postings.py  download_job_bank_wages.py  download_statscan_jvws.py  transform.py  validate.py
src/career_intelligence_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pipeline/: insights.py  io_utils.py  noc_mapper.py  salary.py  skill_matcher.py  skill_synonyms.py  skill_taxonomy.py  statscan_client.py
streamlit_app/: app.py
streamlit_app/pages_impl/: _shared.py  market_context.py  role_fit.py  salary_ranges.py  skill_demand.py
tests/: test_app_smoke.py  test_io_utils.py  test_noc_mapper.py  test_salary.py  test_skill_matcher.py
