[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-intelligence-dashboard"
version = "0.1.0"
description = "Toronto job market intelligence dashboard"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Dante (Mr. C. Mezie)", email = "dante@creedconsult.ca"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0", "requests>=2.31.0", "rapidfuzz>=3.5.0",
    "tqdm>=4.66.0", "playwright>=1.40.0", "httpx>=0.25.0",
    "spacy>=3.7.0", "streamlit>=1.28.0", "plotly>=5.17.0",
    "altair>=5.2.0", "duckdb>=0.9.0", "sqlalchemy>=2.0.0",
    "pyyaml>=6.0.1", "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.1.0", "black>=23.0.0", "mypy>=1.6.0", "pre-commit>=3.5.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
